--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<center>
+  <h1>ママの部屋へようこそ！</h1>
+  <h2>ママ達と交流してみましょう！</h2>
+</center>
