--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="col-md-12 text-center">
       <p>
-        <small class="block">&copy; 2021 mama-room All Rights Reserved.</small>
+        <small class="block">&copy; 2021 mama's room All Rights Reserved.</small>
       </p>
     </div>
   </div>
