登録機能の実装

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,10 @@
 <header class="navbar navbar-fixed-top">
   <div class="container">
-    <%= link_to(image_tag("header_logo.jpg", :alt => ""), root_url, id: 'logo') %>
+    <%= link_to(image_tag("", :alt => ""), root_url, id: 'logo') %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'ママの部屋とは？', about_path %></li>
+        <li><%= link_to 'ユーザー登録（無料）', signup_path %></li>
       </ul>
     </nav>
   </div>
